--- a/index.html
+++ b/index.html
@@ -14,22 +14,14 @@
 
 		<div>
             <input type="text" id="input" placeholder="Enter your dog's allergies" /> </br>
-            <button id="searchButton" onclick="solve()">Button</button>
+            <button class="searchButton" onclick="solve()">
 		</div>
 
         <div id="searchResults">
-            <div>
-                Food Product 100
-            </div>
-            <div>
-                Food Product 2
-            </div>
-            <div>
-                Food Product 3
-            </div>
-            <div>
-                Food Product 4
-            </div>
+            <div>Food Product 1</div>
+            <div>Food Product 2</div>
+            <div>Food Product 3</div>
+            <div>Food Product 4,000,000</div>
         </div>
 	</body>
 </html>
