--- a/index.html
+++ b/index.html
@@ -1,35 +1,309 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Aware Food App</title>
-		<link rel="stylesheet" href="/petStoreApp.js/css/css.css" />
+		<meta charset="utf-8" />
+		<meta content="width=device-width, initial-scale=1.0" name="viewport" />
+
+		<title>Aware Food</title>
+		<meta content="" name="description" />
+		<meta content="" name="keywords" />
+
+		<!-- Favicons -->
+		<link href="assets/img/favicon.png" rel="icon" />
+		<link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+
+		<!-- Google Fonts -->
+		<link
+			href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700"
+			rel="stylesheet"
+		/>
+
+		<!-- Vendor CSS Files -->
+		<link href="assets/vendor/aos/aos.css" rel="stylesheet" />
+		<link
+			href="assets/vendor/bootstrap/css/bootstrap.min.css"
+			rel="stylesheet"
+		/>
+		<link
+			href="assets/vendor/bootstrap-icons/bootstrap-icons.css"
+			rel="stylesheet"
+		/>
+		<link
+			href="assets/vendor/boxicons/css/boxicons.min.css"
+			rel="stylesheet"
+		/>
+		<link
+			href="assets/vendor/glightbox/css/glightbox.min.css"
+			rel="stylesheet"
+		/>
+		<link
+			href="assets/vendor/swiper/swiper-bundle.min.css"
+			rel="stylesheet"
+		/>
+
+		<!-- Template Main CSS File -->
+		<link href="assets/css/style.css" rel="stylesheet" />
+
+		<!-- =======================================================
+  * Template Name: Regna - v4.8.1
+  * Template URL: https://bootstrapmade.com/regna-bootstrap-onepage-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 	</head>
+
 	<body>
-		<div>
-			<h1>Aware Food App</h1>
-		</div>
+		<!-- ======= Header ======= -->
+		<header
+			id="header"
+			class="fixed-top d-flex align-items-center header-transparent"
+		>
+			<div
+				class="container d-flex justify-content-between align-items-center"
+			>
+				<div id="logo">
+					<!-- <a href="index.html"
+						><img src="assets/img/logo.png" alt=""
+					/></a> -->
+					<!-- Uncomment below if you prefer to use a text logo -->
+					<h1><a href="index.html">A|F</a></h1>
+				</div>
 
-		<div>
-            <input type="text" id="input" placeholder="Enter your dog's allergies" /> </br>
-            <button class="searchButton" onclick="solve()">
-		</div>
+				<nav id="navbar" class="navbar">
+					<ul>
+						<li>
+							<a class="nav-link scrollto active" href="#hero"
+								>Home</a
+							>
+						</li>
 
-        <div id="searchResults">
-            <div>
-                Food Product 1
-            </div>
-            <div>
-                Food Product 2
-            </div>
-            <div>
-                Food Product 3
-            </div>
-            <div>
-                Food Product 4
-            </div>
-        </div>
+						<!-- <li>
+							<a class="nav-link scrollto" href="#portfolio"
+								>Portfolio</a
+							>
+						</li> -->
+						<li>
+							<a class="nav-link scrollto" href="#team">Team</a>
+						</li>
+					</ul>
+					<i class="bi bi-list mobile-nav-toggle"></i>
+				</nav>
+				<!-- .navbar -->
+			</div>
+		</header>
+		<!-- End Header -->
+
+		<!-- ======= Hero Section ======= -->
+		<section id="hero">
+			<div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
+				<h1>Aware Food</h1>
+				<h2>Find the safest food for your dog.</h2>
+				<input class="search-field" type="text" placeholder="Enter food allergy...">
+<!--Get the api connection to function after clicking Get Started-->
+				<a href="#about" class="btn-get-started">Get Started</a>
+			</div>
+		</section>
+		<!-- End Hero Section -->
+
+		<main id="main">
+
+				
+
+						<div
+							class="col-lg-6 background order-lg-2 order-1"
+							data-aos="fade-left"
+							data-aos-delay="100"
+						></div>
+					</div>
+				</div>
+			</section>
+			<!-- End About Section -->
+
+			<!-- ======= Portfolio Section ======= -->
+			<section id="portfolio" class="portfolio">
+				<div class="container" data-aos="fade-up">
+					<div class="section-header">
+						<h3 class="section-title">Results</h3>
+					</div>
+
+					<div
+						class="row portfolio-container"
+						data-aos="fade-up"
+						data-aos-delay="200"
+					>
+						<div
+							class="col-lg-4 col-md-6 portfolio-item filter-app"
+						>
+							<img
+								src="assets/img/portfolio/portfolio-1.jpg"
+								class="img-fluid"
+								alt=""
+							/>
+						</div>
+
+						<div
+							class="col-lg-4 col-md-6 portfolio-item filter-web"
+						>
+							<img
+								src="assets/img/portfolio/portfolio-2.jpg"
+								class="img-fluid"
+								alt=""
+							/>
+						</div>
+
+						<div
+							class="col-lg-4 col-md-6 portfolio-item filter-app"
+						>
+							<img
+								src="assets/img/portfolio/portfolio-3.jpg"
+								class="img-fluid"
+								alt=""
+							/>
+						</div>
+
+						<div
+							class="col-lg-4 col-md-6 portfolio-item filter-card"
+						>
+							<img
+								src="assets/img/portfolio/portfolio-4.jpg"
+								class="img-fluid"
+								alt=""
+							/>
+						</div>
+
+						<div
+							class="col-lg-4 col-md-6 portfolio-item filter-web"
+						>
+							<img
+								src="assets/img/portfolio/portfolio-5.jpg"
+								class="img-fluid"
+								alt=""
+							/>
+						</div>
+
+						<div
+							class="col-lg-4 col-md-6 portfolio-item filter-app"
+						>
+							<img
+								src="assets/img/portfolio/portfolio-6.jpg"
+								class="img-fluid"
+								alt=""
+							/>
+						</div>
+
+						<div
+							class="col-lg-4 col-md-6 portfolio-item filter-card"
+						>
+							<img
+								src="assets/img/portfolio/portfolio-7.jpg"
+								class="img-fluid"
+								alt=""
+							/>
+						</div>
+
+						<div
+							class="col-lg-4 col-md-6 portfolio-item filter-card"
+						>
+							<img
+								src="assets/img/portfolio/portfolio-8.jpg"
+								class="img-fluid"
+								alt=""
+							/>
+						</div>
+
+						<div
+							class="col-lg-4 col-md-6 portfolio-item filter-web"
+						>
+							<img
+								src="assets/img/portfolio/portfolio-9.jpg"
+								class="img-fluid"
+								alt=""
+							/>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- End Portfolio Section -->
+
+			<!-- ======= Team Section ======= -->
+			<section id="team">
+				<div class="container" data-aos="fade-up">
+					<div class="section-header">
+						<h3 class="section-title">Team</h3>
+					</div>
+					<div class="row">
+						<div class="col-lg-3 col-md-6">
+							<div
+								class="member"
+								data-aos="fade-up"
+								data-aos-delay="100"
+							>
+								<div class="pic">
+									<img src="assets/img/" alt="" />
+								</div>
+								<h4>Miguel Rodriguez</h4>
+								<a href="https://github.com/CapicuPR">GitHub</a>
+							</div>
+						</div>
+
+						<div class="col-lg-3 col-md-6">
+							<div
+								class="member"
+								data-aos="fade-up"
+								data-aos-delay="200"
+							>
+								<div class="pic">
+									<img src="assets/img/" alt="" />
+								</div>
+								<h4>Michael Allen</h4>
+								<a href="https://github.com/Oceanriderrr">GitHub</a>
+							</div>
+						</div>
+
+						<div class="col-lg-3 col-md-6">
+							<div
+								class="member"
+								data-aos="fade-up"
+								data-aos-delay="300"
+							>
+								<div class="pic">
+									<img src="assets/img/" alt="" />
+								</div>
+								<h4>Michael Grisso</h4>
+								<a href="https://github.com/Michael-Grisso">GitHub</a>
+							</div>
+						</div>
+
+						<div class="col-lg-3 col-md-6">
+							<div
+								class="member"
+								data-aos="fade-up"
+								data-aos-delay="400"
+							>
+								<div class="pic">
+									<img src="assets/img/team-4.jpg" alt="" />
+								</div>
+								<h4>Eben Donkor</h4>
+								<a href="https://github.com/ebendonkor">GitHub</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- End Team Section -->
+		</main>
+		<!-- End #main -->
+
+		<!-- Vendor JS Files -->
+		<script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+		<script src="assets/vendor/aos/aos.js"></script>
+		<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+		<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+		<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+		<script src="assets/vendor/php-email-form/validate.js"></script>
+
+		<!-- Template Main JS File -->
+		<script src="assets/js/main.js"></script>
 	</body>
 </html>
