--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 	</head>
+
+	<body>
+		<!-- ======= Header ======= -->
+		<header
+			id="header"
+			class="fixed-top d-flex align-items-center header-transparent"
+		>
+			<div
+				class="container d-flex justify-content-between align-items-center"
+			>
+				<div id="logo">
+					<h1><a href="index.html">A|F</a></h1>
+				</div>
 				<nav id="navbar" class="navbar">
 					<ul>
 						<li>
