--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 			<div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
 				<h1>Aware Food</h1>
 				<h2>Find the safest food for your dog.</h2>
-				<input class="search-field" type="text" placeholder="Enter food allergy...">
+				<input class="search-field" type="text" id="input" placeholder="Enter food allergy...">
 <!--Get the api connection to function after clicking Get Started-->
-				<a href="#about" class="btn-get-started">Get Started</a>
+				<input type="button" id="inputBtn" class="btn-get-started" value="Get Started" onclick="searchFood()">
 			</div>
 		</section>
 		<!-- End Hero Section -->
