added picture of myself

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 								data-aos-delay="200"
 							>
 								<div class="pic">
-									<img src="assets/img/" alt="" />
+									<img src="assets/img/TysonAndMe.JPG" alt="My dog and I" />
 								</div>
 								<h4>Michael Allen</h4>
 								<a href="https://github.com/Oceanriderrr">GitHub</a>
