--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 								data-aos-delay="100"
 							>
 								<div class="pic">
-									<img src="assets/img/" alt="" />
+									<img src="assets/img/MiguelRR.jpg" alt="Miguel picture" />
 								</div>
 								<h4>Miguel Rodriguez</h4>
 								<a href="https://github.com/CapicuPR">GitHub</a>
