--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 								data-aos-delay="300"
 							>
 								<div class="pic">
-									<img src="assets/img/" alt="" />
+									<img src="assets/img/helitour.png" alt="" />
 								</div>
 								<h4>Michael Grisso</h4>
 								<a href="https://github.com/Michael-Grisso">GitHub</a>
@@ -265,7 +265,7 @@
 								data-aos-delay="400"
 							>
 								<div class="pic">
-									<img src="assets/img/team-4.jpg" alt="" />
+									
 								</div>
 								<h4>Eben Donkor</h4>
 								<a href="https://github.com/ebendonkor">GitHub</a>
