--- a/index.html
+++ b/index.html
@@ -121,13 +121,10 @@
 					<div id="searchResultsArea" class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
 
-						<!-- <div id="searchResultUPCcodes" class="col-lg-4 col-md-6 portfolio-item filter-app">
+						<!-- 
+						<div id="searchResultUPCcodes" class="col-lg-4 col-md-6 portfolio-item filter-app">
 							<h3>UPC code search results</h3>
-						</div>
-
-						<div
-							class="col-lg-4 col-md-6 portfolio-item filter-web"
-						>
+						
 							<img
 								src="assets/img/portfolio/portfolio-2.jpg"
 								class="img-fluid"
