--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				<h2>Find the safest food for your dog.</h2>
 				<input class="search-field" type="text" id="inputForSearch" placeholder="Enter food allergy...">
 <!--Get the api connection to function after clicking Get Started-->
-				<input type="button" id="inputBtn" class="btn-get-started" value="Get Started" onclick="searchFood()">
+				<input type="button" id="inputBtn" class="btn-get-started" value="Remove Allergen" onclick="searchFood()">
 			</div>
 		</section>
 		<!-- End Hero Section -->
@@ -206,8 +206,6 @@
 							<p>
 								Click the icon for a new random dog fact
 							</p>
-							
-
 							<div
 								class="icon-box"
 								data-aos="fade-up"
@@ -292,7 +290,7 @@
 									<img src="assets/img/MiguelRR.jpg" alt="Miguel picture" />
 								</div>
 								<h4>Miguel Rodriguez</h4>
-								<a href="https://github.com/CapicuPR">GitHub</a>
+								<a href="https://github.com/CapicuPR" title="Miguel Rodriguez GitHub"><img src="https://www.freeiconspng.com/uploads/github-icon-1.png" width="35" alt="GitHub image" /></a>
 							</div>
 						</div>
 
@@ -306,7 +304,7 @@
 									<img src="assets/img/TysonAndMe.JPG" alt="My dog and I" />
 								</div>
 								<h4>Michael Allen</h4>
-								<a href="https://github.com/Oceanriderrr">GitHub</a>
+								<a href="https://github.com/Oceanriderrr" title="Michael Allen GitHub"><img src="https://www.freeiconspng.com/uploads/github-icon-1.png" width="35" alt="GitHub image" /></a>
 							</div>
 						</div>
 
@@ -320,7 +318,7 @@
 									<img src="assets/img/helitour.png" alt="" />
 								</div>
 								<h4>Michael Grisso</h4>
-								<a href="https://github.com/Michael-Grisso">GitHub</a>
+								<a href="https://github.com/Michael-Grisso" title="Michael Grisso GitHub"><img src="https://www.freeiconspng.com/uploads/github-icon-1.png" width="35" alt="GitHub image" /></a>
 							</div>
 						</div>
 
@@ -334,7 +332,7 @@
 									
 								</div>
 								<h4>Eben Donkor</h4>
-								<a href="https://github.com/ebendonkor">GitHub</a>
+								<a href="https://github.com/ebendonkor" title="Eben Donkor GitHub"><img src="https://www.freeiconspng.com/uploads/github-icon-1.png" width="35" alt="GitHub image" /></a>
 							</div>
 						</div>
 					</div>
