centered the fun fact section with CSS

--- a/index.html
+++ b/index.html
@@ -93,15 +93,25 @@
 			<div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
 				<h1>Aware Food</h1>
 				<h2>Find the safest food for your dog.</h2>
-				<input class="search-field" type="text" id="inputForSearch" placeholder="Enter food allergy...">
-<!--Get the api connection to function after clicking Get Started-->
-				<input type="button" id="inputBtn" class="btn-get-started" value="Remove Allergen" onclick="searchFood()">
+				<input
+					class="search-field"
+					type="text"
+					id="inputForSearch"
+					placeholder="Enter food allergy..."
+				/>
+				<!--Get the api connection to function after clicking Get Started-->
+				<input
+					type="button"
+					id="inputBtn"
+					class="btn-get-started"
+					value="Remove Allergen"
+					onclick="searchFood()"
+				/>
 			</div>
 		</section>
 		<!-- End Hero Section -->
 
 		<main id="main">
-
 			<!-- ======= Portfolio Section ======= -->
 			<section id="portfolio" class="portfolio">
 				<div class="container" data-aos="fade-up">
@@ -109,9 +119,12 @@
 						<h3 class="section-title">Results</h3>
 					</div>
 
-					<div id="searchResultsArea" class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-
+					<div
+						id="searchResultsArea"
+						class="row portfolio-container"
+						data-aos="fade-up"
+						data-aos-delay="200"
+					>
 						<!-- 
 						<div id="searchResultUPCcodes" class="col-lg-4 col-md-6 portfolio-item filter-app">
 							<h3>UPC code search results</h3>
@@ -204,16 +217,10 @@
 						<div class="col-lg-6 content order-lg-1 order-2">
 							<h2 class="title">A few fun dog facts</h2>
 
-
-							<p>
-								Click the icon for a new random dog fact
-							</p>
-
 							<div
 								class="icon-box"
 								data-aos="fade-up"
 								data-aos-delay="100"
-
 								id="dogFact"
 							>
 								<!-- <div class="icon" >
@@ -255,10 +262,20 @@
 								data-aos-delay="100"
 							>
 								<div class="pic">
-									<img src="assets/img/MiguelRR.jpg" alt="Miguel picture" />
+									<img
+										src="assets/img/MiguelRR.jpg"
+										alt="Miguel picture"
+									/>
 								</div>
 								<h4>Miguel Rodriguez</h4>
-								<a href="https://github.com/CapicuPR" title="Miguel Rodriguez GitHub"><img src="https://www.freeiconspng.com/uploads/github-icon-1.png" width="35" alt="GitHub image" /></a>
+								<a
+									href="https://github.com/CapicuPR"
+									title="Miguel Rodriguez GitHub"
+									><img
+										src="https://www.freeiconspng.com/uploads/github-icon-1.png"
+										width="35"
+										alt="GitHub image"
+								/></a>
 							</div>
 						</div>
 
@@ -269,10 +286,20 @@
 								data-aos-delay="200"
 							>
 								<div class="pic">
-									<img src="assets/img/TysonAndMe.JPG" alt="My dog and I" />
+									<img
+										src="assets/img/TysonAndMe.JPG"
+										alt="My dog and I"
+									/>
 								</div>
 								<h4>Michael Allen</h4>
-								<a href="https://github.com/Oceanriderrr" title="Michael Allen GitHub"><img src="https://www.freeiconspng.com/uploads/github-icon-1.png" width="35" alt="GitHub image" /></a>
+								<a
+									href="https://github.com/Oceanriderrr"
+									title="Michael Allen GitHub"
+									><img
+										src="https://www.freeiconspng.com/uploads/github-icon-1.png"
+										width="35"
+										alt="GitHub image"
+								/></a>
 							</div>
 						</div>
 
@@ -286,7 +313,14 @@
 									<img src="assets/img/helitour.png" alt="" />
 								</div>
 								<h4>Michael Grisso</h4>
-								<a href="https://github.com/Michael-Grisso" title="Michael Grisso GitHub"><img src="https://www.freeiconspng.com/uploads/github-icon-1.png" width="35" alt="GitHub image" /></a>
+								<a
+									href="https://github.com/Michael-Grisso"
+									title="Michael Grisso GitHub"
+									><img
+										src="https://www.freeiconspng.com/uploads/github-icon-1.png"
+										width="35"
+										alt="GitHub image"
+								/></a>
 							</div>
 						</div>
 
@@ -296,11 +330,16 @@
 								data-aos="fade-up"
 								data-aos-delay="400"
 							>
-								<div class="pic">
-									
-								</div>
+								<div class="pic"></div>
 								<h4>Eben Donkor</h4>
-								<a href="https://github.com/ebendonkor" title="Eben Donkor GitHub"><img src="https://www.freeiconspng.com/uploads/github-icon-1.png" width="35" alt="GitHub image" /></a>
+								<a
+									href="https://github.com/ebendonkor"
+									title="Eben Donkor GitHub"
+									><img
+										src="https://www.freeiconspng.com/uploads/github-icon-1.png"
+										width="35"
+										alt="GitHub image"
+								/></a>
 							</div>
 						</div>
 					</div>
